force-app/main/default/objects/Report_Type_Object__c/Report_Type_Object__c.object-meta.xml
<CustomObject>
    <label>Report Type Object</label>
    <nameField>
        <label>Report Type Objects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Type Object</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>