force-app/main/default/objects/Report_Type_Object__c/fields/objectName__c.field-meta.xml
<CustomField>
    <fullName>objectName__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>