force-app/main/default/objects/Report_Type_Object__c/fields/reportTypeId__c.field-meta.xml
<CustomField>
    <fullName>reportTypeId__c</fullName>
    <description>Best guess at the related objects to a Report Type</description>
    <label>Report Type</label>
    <referenceTo>Report_Type__c</referenceTo>
    <relationshipLabel>Related Objects</relationshipLabel>
    <relationshipName>Report_Type_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>