force-app/main/default/objects/Report_Type_Object__c/fields/reportTypeObjectName__c.field-meta.xml
<CustomField>
    <fullName>reportTypeObjectName__c</fullName>
    <externalId>true</externalId>
    <label>Report Type Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>